# justly-soroban

./: .gitignore  AGENTS.md  README.md  minikit.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
contracts/justly/: Cargo.toml
contracts/justly/src/: lib.rs
contracts/justly_proxy/: Cargo.toml
contracts/justly_proxy/src/: error.rs  lib.rs  storage.rs  types.rs
contracts/justly_proxy/src/tests/: mock_arbitrable.rs  mod.rs  proxy.rs
scripts/: generateHash.js
src/app/: layout.tsx  providers.tsx
src/app/appkit/: page.tsx
src/app/beexo/: layout.tsx  page.tsx
src/app/category-amount/: page.tsx
src/app/create/: page.tsx
src/app/debug/: page.tsx
src/app/my-votes/: page.tsx
src/app/pay/[id]/: page.tsx
src/app/profile/: page.tsx
src/blockchain/: context.tsx  hooks.ts  index.ts  registry.ts  types.ts
src/components/: ConnectButton.tsx  DisputeSetupWizard.tsx  VoteForm.tsx
src/components/category-amount/: SwipeButton.tsx
src/config/: app.ts  beexoConfig.ts  index.ts
src/contexts/: PrizePoolContext.tsx  Provider.tsx
src/contracts/: slice-abi.ts  slice.ts
src/hooks/: useAssignDispute.ts  useDevSetup.ts  useDisputeList.ts  useEvidence.ts  useExecuteRuling.ts  useGetDispute.ts  usePayDispute.ts  useSendFunds.tsx  useSliceContract.ts  useSliceVoting.ts  useStepBasics.ts  useTokenBalance.ts  useVote.ts
src/providers/: ConnectProvider.tsx  ContractsProvider.tsx  Provider.tsx  XOContractsProvider.tsx
src/services/: MockContractService.ts
src/util/: config.ts  disputeAdapter.ts  ipfs.ts  storage.ts  wallet.ts
src/wagmi/: xoConnector.ts
(+42 files in other folders)
