[package]
name = "justly_proxy"
description = "Justly arbitration proxy contract"
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { version = "23.1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
